<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/almostBlack"
    tools:ignore="HardCodedText"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="20dp">
        <TextView
            android:id="@+id/workingsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:lines="2"
            android:maxLines="2"
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/resultsTextView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resultsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        style="@style/buttonRow">

        <Button
            style="@style/buttonNumber"
            android:textColor="@color/red"
            android:onClick="allClearAction"
            android:text="@string/all_clear"/>
        <Button
            style="@style/buttonNumber"
            android:textColor="@color/red"
            android:onClick="backSpaceAction"
            android:text="@string/backspace"/>
        <Button
            style="@style/buttonOperator"
            android:text="@string/logarithm"/>
        <Button
            style="@style/buttonOperator"
            android:text="@string/nat_log"/>

    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow">

        <Button
            style="@style/buttonOperator"
            android:text="@string/square_root"/>
        <Button
            style="@style/buttonOperator"
            android:text="@string/sin"/>
        <Button
            style="@style/buttonOperator"
            android:text="@string/cos"/>
        <Button
            style="@style/buttonOperator"
            android:text="@string/tan"/>

    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow">

        <Button
            style="@style/buttonOperator"
            android:text="@string/exponent"/>
        <Button
            style="@style/buttonOperator"
            android:text="@string/left_parenthesis"/>
        <Button
            style="@style/buttonOperator"
            android:text="@string/right_parenthesis"/>
        <Button
            style="@style/buttonOperator"
            android:text="@string/division"/>

    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow">

        <Button
            style="@style/buttonNumber"
            android:text="7"/>
        <Button
            style="@style/buttonNumber"
            android:text="8"/>
        <Button
            style="@style/buttonNumber"
            android:text="9"/>
        <Button
            style="@style/buttonOperator"
            android:text="@string/multiplication"/>

    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow">

        <Button
            style="@style/buttonNumber"
            android:text="4"/>
        <Button
            style="@style/buttonNumber"
            android:text="5"/>
        <Button
            style="@style/buttonNumber"
            android:text="6"/>
        <Button
            style="@style/buttonOperator"
            android:text="@string/minus"/>

    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow">

        <Button
            style="@style/buttonNumber"
            android:text="1"/>
        <Button
            style="@style/buttonNumber"
            android:text="2"/>
        <Button
            style="@style/buttonNumber"
            android:text="3"/>
        <Button
            style="@style/buttonOperator"
            android:text="@string/plus"/>

    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow">

        <Button
            style="@style/buttonNumber"
            android:text="."/>
        <Button
            style="@style/buttonNumber"
            android:text="0"/>
        <Button
            style="@style/buttonNumber"
            android:layout_weight="2"
            android:background="@color/orange"
            android:textSize="40sp"
            android:onClick="equalsAction"
            android:text="="/>

    </LinearLayout>
</LinearLayout>